 * [FILEUPLOAD-217] - drop JDK1.3 support and update to Java5
 * [FILEUPLOAD-218] - Update version in POM
 * [FILEUPLOAD-219] - upgrade tests to JUnit 4
 * [FILEUPLOAD-220] - replace package.html with package-info.java
 * [FILEUPLOAD-221] - FileItemHeadersImpl can now use LinkedHashMap
 * [FILEUPLOAD-222] - Mark @deprecated classes/methods with @Deprecated annotation

Bug
=============

 * [FILEUPLOAD-143] - "Stream ended unexpectedly" when posting from a Flash client
 * [FILEUPLOAD-173] - Manifest for OSGi has invalid syntax
 * [FILEUPLOAD-183] - commons-io dependency does not get loaded by maven if only dependency to commons-fileupload is specified
 * [FILEUPLOAD-185] - http://commons.apache.org/fileupload/index.html is out of date
 * [FILEUPLOAD-186] - http://commons.apache.org/fileupload/index.html should not mention nightly builds
 * [FILEUPLOAD-189] - DiskFileItemFactory use of FileCleaningTracker is documented or coded wrong
 * [FILEUPLOAD-195] - Error reading the file size larger than 2 gb
 * [FILEUPLOAD-197] - ServletFileUpload isMultipartContent method does not support HTTP PUT
 * [FILEUPLOAD-199] - Uploads have unexpected results for files with non-ASCII names - support RFC2047
 * [FILEUPLOAD-202] - org.apache.commons.fileupload.FileUploadBase$IOFileUploadException: Processing of multipart/form-data request failed. Stream ended unexpectedly
 * [FILEUPLOAD-204] - FileItem.getHeaders() returns always null.
 * [FILEUPLOAD-212] - Insecure request size checking
 * [FILEUPLOAD-214] - ServletFileUpload only accepts POST requests
 * [FILEUPLOAD-228] - (Servlet|Portlet)RequestContext#contentLength() must return request.getContentLength() if Content-length header is not available
 * [FILEUPLOAD-229] - toLowerCase() is Locale-dependent; should use toLowerCase(Locale.ENGLISH) instead

Improvement
=============

 * [FILEUPLOAD-182] - Documentation: add simple HTML form example to fileupload user guide
 * [FILEUPLOAD-207] - enhance file read/write performance